Add MenuSearchTool and menu_specialist agent. Ensure MCP server is working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "restaurant_flow using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]==1.5.0"
+    "crewai-tools[mcp]>=1.5.0",
+    "crewai[tools]==1.5.0",
+    "mcp>=1.22.0",
+    "mcp-server-sqlite>=2025.4.25",
 ]
 
 [project.scripts]
