--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "crewai-tools[mcp]>=1.5.0",
     "crewai[tools]==1.5.0",
+    "litellm>=1.80.7",
     "mcp>=1.22.0",
     "mcp-server-sqlite>=2025.4.25",
 ]
